--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <img class="img" id="anim_1" src="images/brain2.png" alt="brain" width="200px" height="170px">
-    <img class="img" id="anim_3" src="images/number.png" alt="brain" width="200px" height="170px">
-    <img class="img" id="anim_4" src="images/gkquiz.png" alt="brain" width="200px" height="170px">
-    
+        <img class="img" id="anim_1" src="images/brain2.png" alt="brain" width="200px" height="170px">   
         <div class="imagediv">
-            <img src="quizlogo2.png" alt="logo" width="400px" height="370px">
+            <img src="quizlogo2.png" id="main_img" alt="logo" width="400px" height="370px">
         </div>
        <div class="main">
            <div class="content">
