--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Welcome Quizzers</h1>
             <input type="text" id="input" placeholder="Name" size="20" onfocus="this.placeholder=''" 
             onblur="this.placeholder='Name'">
-            <button class="btn">Lets Play</button>
+             <a href="https://hrithik08-varshney.github.io/Quiz-Second-Page/"><button class="btn">Lets Play</button></a>
            </div>  
        </div>
        <script src="app.js"></script>
